# autd3_demo_app

./: .gitmodules  README.md
client/: README.md  pubspec.yaml
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/shinolab/autd3_demo_app/: MainActivity.kt
client/android/app/src/profile/: AndroidManifest.xml
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart  settings.dart
client/lib/controller/: controller.dart  network_controller.dart
client/lib/view/: app.dart  config.dart  connect.dart  demo.dart  gain.dart  geometry.dart  modulation.dart
client/lib/view/configs/: silent.dart  temp.dart
client/lib/view/demos/: handrail_circle.dart  handrail_line.dart  lm.dart  pursuit.dart
client/lib/view/gains/: bessel.dart  focus.dart
client/lib/view/modulations/: sine.dart  static.dart
client/linux/: CMakeLists.txt  my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/test/: widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
server/: CMakeLists.txt  main.cpp  util.hpp
